fix certification alignment. large (1920w+) design

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -308,6 +308,7 @@ a {
     border-radius: 0.5rem;
     margin: 1rem 0.6166665%;
     background-color: white;
+
     &:nth-child(3n) {
         margin-right: 0;
     }
@@ -369,22 +370,17 @@ a {
         background-color: $background-grey;
     }
     &__certifications-list {
-        width: 90%;
         margin: 0 auto;
+        width: 100%;
+        justify-content: center;
     }
-    &__certification {
-        flex: 0 0 50%;
-        margin: 0.2rem 0;
-        &:nth-child(2n+1) {
-            text-align: right;
-            .dealer__certification-text {
-                margin-right: 20%;
-            }
+    &__certification-col {
+        flex: 0 0 auto;
+        &:first-child {
+            margin-right: 2rem;
         }
-        &:nth-child(2n) {
-            .dealer__certification-icon {
-                margin-left: 20%;
-            }
+        &:last-child {
+            margin-left: 2rem;
         }
     }
     &__certification-icon {
